syntax = "proto3";

// Package name
option go_package = "RetroPGF-Hub/RetroPGF-Hub-Backend-Go";


// Structures
message GetUserInfoReq {
    string userId = 1;
}
message GetUserInfoRes {
    string userId = 1;
    string email = 2;
    string source = 3;
    string profile = 4;
    string user_name = 5;
    string first_name = 6;
    string last_name = 7;
}


// Method
service UsersGrpcService {
    rpc GetUserInfoById(GetUserInfoReq) returns (GetUserInfoRes);
}


